<resources>
    <string name="app_name">Pidgipedia</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_quiz">Quiz</string>
    <string name="word_of_the_day_channel">Word Of The Day</string>
    <string name="words_approved_channel">Words Approved</string>
    <string name="more_tori">More Tori</string>
    <string name="onboarding_contribution_desc">Contributing to a global vocabulary for you and with you.</string>
    <string name="onboarding_quiz_desc">Test your knowledge by attempting various questions.</string>
    <string name="onboarding_rewards_desc">Challenge yourself with numerous badges unclaimed.</string>
    <string name="start">Start</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="retrieve_a_forgotten_password">Retrieve a forgotten password</string>
    <string name="enter_email_first">Enter email first,\nusername second,</string>
    <string name="create_an_account_instead">Create an Account Instead</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="log_in">Log In</string>
    <string name="proceed">Proceed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="few_more_steps">A few more steps,</string>
    <string name="finish">Finish</string>
    <string name="choose_a_password">Choose a password.</string>
    <string name="welcome_text">Welcome, %1$s!</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="do_you_wish_to_share_an_unlisted_word">Do you wish to suggest an unlisted word?</string>
    <string name="dismiss">Dismiss</string>
    <string name="suggest">Suggest</string>
    <string name="learn">Learn</string>
    <string name="current">Current</string>
    <string name="play">Play</string>
    <string name="rank">Rank</string>
    <string name="high_score">High Score</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_all">Clear All</string>
    <string name="badges">Badges</string>
    <string name="approved_words">Approved Words</string>
    <string name="dummy_bio">Student, Part-time Writer. The quick brown fox has never jumped over the lazy dog.</string>
    <string name="full_name">Full Name</string>
    <string name="bio">Bio</string>
    <string name="activate_date_picker">Touch to activate Date Picker</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dummy_person_text">Greta Thunberg</string>
    <string name="delete_picture">Delete Picture</string>
    <string name="add_picture_from_files">Add picture from Files</string>
    <string name="add_picture_with_camera">Add picture with camera</string>
    <string name="language">Language</string>
    <string name="graphics_and_images_credit">All illustrations and animations were designed by <b>Favour Felix</b> with elements from <b>freepik</b> and <b>pikisuperstar</b>.\nImages were gotten from Google Searches</string>
    <string name="data_population">Data Population</string>
    <string name="contact">Contact</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="contact_contents">- felixfavour0@gmail.com \n- felix.esther.c@gmail.com \n- GitHub.com/felixfavour \n- naijalingo.com</string>
    <string name="data_population_credits">Initial data was supplied by <b>naijalingo.com</b> and reconstructed by <b>Esther Felix</b> with joint effort from <b>Favour Felix</b>.</string>
    <string name="graphics_and_images">Graphics and Images</string>
    <string name="pidgipedia_app">Pidgipedia App</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="default_theme">Default</string>
    <string name="account">Account</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="manage_data">Manage Data</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="history_size">History Size</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="miscellaneous_news">Miscellaneous News</string>
    <string name="miscellanous_news_desc">Get Notifications about Offers, Promotions and Tips</string>
    <string name="comment_responses">Comment Responses</string>
    <string name="rank_promotion">Rank Promotion</string>
    <string name="delete_all_history">Delete All History</string>
    <string name="delete_all_bookmarks">Delete All Bookmarks</string>
    <string name="share_this_app">Share this App</string>
    <string name="information">Information</string>
    <string name="delete_acct_message">Are you sure you want to delete this account? All of your data would be lost.</string>
    <string name="delete">Delete</string>
    <string name="just_kidding">Just Kidding</string>
    <string name="delete_bookmarks_message">Are you sure you want to delete all of your Bookmarks. This action is irreversible!</string>
    <string name="delete_history_message">Are you sure you want to delete all of your saved Search Histories, This action is irreversible!</string>
    <string name="add_account">Add account</string>
    <string name="words_awaiting_approval">Words awaiting Approval</string>
    <string name="your_score">Your Score</string>
    <string name="score_to_ace">%d MORE TO ACE</string>
    <string name="next">Next</string>
    <string name="question_progress_string">%1$d out of %2$d</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="character_limit">Character Limit: 250</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="etymology">Etymology</string>
    <string name="enter_to_submit">Click check icon to submit</string>
    <string name="synonyms">Synonyms</string>
    <string name="english_equivalent">English Equivalent</string>
    <string name="eng_equivalent_desc">Word Synonym if expressed in English</string>
    <string name="word_transcription">Word Transcription</string>
    <string name="no_recordings_yet">No recording yet</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="duplicate_synonym_warning">%1$s has been added to Synonyms</string>
    <string name="word_image">Word image</string>
    <string name="sentences">Sentences</string>
    <string name="index">Index</string>
    <string name="eventstamp">Eventstamp</string>
    <string name="syllabic_division_example"><b>For example: </b>"dan-fo"</string>
    <string name="syllabic_division">Syllabic Division</string>
    <string name="comment_response_placeholder"><b>%1$s</b> replied <b>%2$s</b>\'s comment</string>
    <string name="comment_response_placeholder2"><b>%1$s</b> replied your comment</string>
    <string name="comment_response_placeholder3"><b>%1$s</b> replied their comment</string>
    <string name="word_comment_placeholder"><b>%1$s</b> commented on a word <b>%2$s</b> suggested</string>
    <string name="word_approval_placeholder"><b>%1$s</b> approved the word <b>%2$s</b> suggested</string>
    <string name="word_suggestion_placeholder"><b>%1$s</b> suggested a Word</string>
    <string name="badge_reward_placeholder"><b>%1$s</b> earned <b>%2$s</b></string>
    <string name="rank_reward_placeholder"><b>%1$s</b> rank has leveled up to <b>%2$s</b>!</string>
    <string name="word_commented_on_placeholder"><b>%1$s</b> commented on the word <b>%2$s</b> suggested.</string>
    <string name="word_rejection_placeholder"><b>%1$s</b> rejected the word <b>%2$s</b> suggested</string>
    <string name="word_suggestion">Word Suggestion</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="a_year_ago">A year ago</string>
    <string name="years_ago">%d years ago</string>
    <string name="a_month_ago">A month ago</string>
    <string name="months_ago">%d months ago</string>
    <string name="a_day_ago">A day ago</string>
    <string name="an_hour_ago">An hour ago</string>
    <string name="a_few_seconds_ago">A few seconds ago</string>
    <string name="a_week_ago">A week ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="weeks_ago">%d weeks ago</string>
    <string name="approved_words_placeholder">%d words</string>
    <string name="badges_placeholder">%d badges</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="derogatory_warning">Is Word Explicit or Derogatory?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_words">search words</string>
    <string name="author">Author</string>
    <string name="view_all_words">View all words</string>
    <string name="loading">loading…</string>
    <string name="ellipsis">…</string>
    <string name="theres_nothing_here">There\'s nothing here</string>
    <string name="download_app_for_more">Download the Pidgipedia mobile app for more today.</string>
    <string name="unaccomplished_badges_are_greyed_out">Unaccomplished Badges are greyed out.\nThe count on each badge represents the number of Approved Words</string>
    <string name="see_more">See more</string>
    <string name="wod_parting_text1">We hope you learnt a lot today, Have a lovely day and come back tomorrow for more knowledge</string>
    <string name="about_pidgipedia">About Pidgipedia</string>
    <string name="app_theme">App Theme</string>
    <string name="display">Display</string>
    <string name="it_seems_you_have_no_bookmarked_word">It seems you have no bookmarked word</string>
    <string name="view_more_comments">View more comments</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">Hard</string>
    <string name="are_you_sure_you_want_to_quit_this_game">Are you sure you want to quit this game?</string>
    <string name="fill_all_fields">You will need to fill in all required fields.</string>
    <string name="username">Username</string>
    <string name="username_guidelines">username must be more than 6 characters and distint</string>
    <string name="password_guidelines">Password must contain Uppercase and Lowercase letters and digits</string>
    <string name="email_guideline">This email is owned by another account</string>
    <string name="checking">Checking…</string>
    <string name="username_taken">Username is already in use</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="email_taken">This email is already in use</string>
    <string name="internet_connection_warning">Check that you have a stable internet connection.</string>
    <string name="user_not_found_error">Funny how I don\'t seem to recognize this user. Are you messing with me?</string>
    <string name="wrong_password_error">Check that you are sending in the right password.</string>
    <string name="user_not_found_header">User Not Found</string>
    <string name="network_error">Network Error</string>
    <string name="enter_your_email_fp">Enter your email,</string>
    <string name="send">Send</string>
    <string name="sent">Sent!</string>
    <string name="ok">OK</string>
    <string name="request_password_success">Check your email inbox for retrieval processes.</string>
</resources>