<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_navigation.xml"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.felixfavour.pidgipedia.view.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_badgesFragment"
            app:destination="@id/badgesFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="isAuthor"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.felixfavour.pidgipedia.view.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <argument
            android:name="user"
            app:argType="com.felixfavour.pidgipedia.entity.RemoteUser" />
    </fragment>
    <fragment
        android:id="@+id/badgesFragment"
        android:name="com.felixfavour.pidgipedia.view.profile.BadgesFragment"
        android:label="@string/badges"
        tools:layout="@layout/fragment_badges" >
        <argument
            android:name="user"
            app:argType="com.felixfavour.pidgipedia.entity.RemoteUser" />
    </fragment>
</navigation>