<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_navigation.xml"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.felixfavour.pidgipedia.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_informationFragment"
            app:destination="@id/informationFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_languageFragment"
            app:destination="@id/languageFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_profileActivity"
            app:destination="@id/profileActivity"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/informationFragment"
        android:name="com.felixfavour.pidgipedia.ui.settings.InformationFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_information" />
    <fragment
        android:id="@+id/languageFragment"
        android:name="com.felixfavour.pidgipedia.ui.settings.LanguageFragment"
        android:label="@string/language"
        tools:layout="@layout/fragment_language" />
    <activity
        android:id="@+id/profileActivity"
        android:name="com.felixfavour.pidgipedia.ProfileActivity"
        android:label="ProfileActivity" />
</navigation>